@@ -1,3 +1,14 @@
+2005-04-24  Philippe Gerum  <rpm@xenomai.org>
+
+	* include/nucleus/types.h: Stop shouting, rename ROOT_THREAD_*
+	routines to lowercase versions.
+
+2005-04-23  Philippe Gerum  <rpm@xenomai.org>
+
+	* include/nucleus/asm-uvm/system.h (xnarch_timer_thread): Use
+	pthread_set_periodic_rt()/pthread_wait_period_rt() instead of
+	nanosleep() to get a more accurate timeline.
+
 2005-04-22  Philippe Gerum  <rpm@xenomai.org>
 
 	* skins/rtai/syscall.c (__rt_task_set_mode): Add T_PRIMARY bit to
